[package]
name = "cli"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.89"
clap = { version = "4.5.19", features = ["derive"] }
dotenv = "0.15.0"
sdk = { path = "../sdk" }
serde_json = "1.0.129"
tokio = { version = "1.40.0", features = ["full"] }
