[package]
name = "webhooks_examples"
version = "0.1.0"
edition = "2021"
publish = false

[[example]]
name = "destination-server"
path = "src/destination-server/main.rs"

[[example]]
name = "producer-server"
path = "src/producer-server/main.rs"

[dependencies]
actix-web = "4"
futures = "0.3.30"
rand = "0.8.4"
sdk = { path = "../sdk" }
tokio = { version = "1.37.0", features = ["full"] }
