[package]
name = "webhooks_examples"
version = "0.1.0"
edition = "2021"
publish = false

[[example]]
name = "destination-server"
path = "src/destination-server.rs"

[[example]]
name = "producer-server"
path = "src/producer-server.rs"

[dependencies]
actix-web = "4.9.0"
dotenv = "0.15.0"
futures = "0.3.30"
rand = "0.8.5"
sdk = { path = "../sdk" }
serde_json = "1.0.128"
tokio = { version = "1.40.0", features = ["full"] }
