[package]
name = "sdk"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.12.9", features = ["json"] }
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.133"
thiserror = "2.0.0"
tokio = { version = "1.41.0", features = ["full"] }
url = "2.5.2"

[dev-dependencies]
mockito = "1.5.0"
