[package]
name = "server"
version = "0.1.0"
edition = "2021"
default-run = "server"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.7.0"
chrono = { version = "0.4.38", features = ["serde"] }
dotenv = "0.15.0"
envconfig = "0.10.0"
futures = "0.3.30"
futures-lite = "2.3.0"
itertools = "0.13.0"
lapin = "2.3.4"
lazy_static = "1.4.0"
log = "0.4.21"
log4rs = "1.3.0"
rand = "0.8.5"
regex = "1.10.4"
reqwest = { version = "0.12.4", features = ["json"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = { version = "1.0.117", features = ["raw_value"] }
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "chrono"] }
svix-ksuid = { version = "^0.8.0", features = ["serde"] }
tokio = { version = "1.38.0", features = ["full"] }
url = "2.5.0"
validator = { version = "0.18.1", features = ["derive"] }

[dev-dependencies]
fake = "2.9.2"
mockito = "1.4.0"
test-case = "3.3.1"

[[bin]]
name = "server"
path = "src/bin/server.rs"

[[bin]]
name = "dispatcher"
path = "src/bin/dispatcher.rs"
