[package]
name = "server"
version = "0.1.0"
edition = "2021"
default-run = "server"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.9.0"
chrono = { version = "0.4.38", features = ["serde"] }
dotenv = "0.15.0"
envconfig = "0.11.0"
futures = "0.3.30"
futures-lite = "2.3.0"
itertools = "0.13.0"
lapin = "2.5.0"
lazy_static = "1.5.0"
log = "0.4.22"
log4rs = "1.3.0"
rand = "0.8.5"
regex = "1.10.6"
reqwest = { version = "0.12.7", features = ["json"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = { version = "1.0.125", features = ["raw_value"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "chrono"] }
svix-ksuid = { version = "^0.8.0", features = ["serde"] }
tokio = { version = "1.40.0", features = ["full"] }
url = "2.5.2"
validator = { version = "0.18.1", features = ["derive"] }

[dev-dependencies]
fake = "2.10.0"
mockito = "1.5.0"
test-case = "3.3.1"

[[bin]]
name = "server"
path = "src/bin/server.rs"

[[bin]]
name = "dispatcher"
path = "src/bin/dispatcher.rs"
