[package]
name = "server"
version = "0.1.0"
edition = "2021"
default-run = "server"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.9.0"
chrono = { version = "0.4.38", features = ["serde"] }
dotenv = "0.15.0"
envconfig = "0.11.0"
futures = "0.3.31"
futures-lite = "2.4.0"
itertools = "0.13.0"
lapin = "2.5.0"
lazy_static = "1.5.0"
log = "0.4.22"
log4rs = "1.3.0"
rand = "0.8.5"
regex = "1.11.1"
reqwest = { version = "0.12.9", features = ["json"] }
serde = { version = "1.0.214", features = ["derive"] }
serde_json = { version = "1.0.132", features = ["raw_value"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "chrono"] }
svix-ksuid = { version = "^0.8.0", features = ["serde"] }
tokio = { version = "1.41.0", features = ["full"] }
url = "2.5.2"
validator = { version = "0.19.0", features = ["derive"] }

[dev-dependencies]
fake = "3.0.0"
mockito = "1.6.1"
test-case = "3.3.1"

[[bin]]
name = "server"
path = "src/bin/server.rs"

[[bin]]
name = "dispatcher"
path = "src/bin/dispatcher.rs"
